@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix --disable-ipv6 build on platforms with getifaddrs().
+     PR 39199.  [Joe Orton]
+
   *) Correctly retrieve 'empty' environment values with apr_env_get
      on Win32 (e.g. "VAR="), and added validation to testall suite.  
      PR 40764.  [Issac Goldstand <margol beamartyr.net>]
